--- a/stylePokedle.css
+++ b/stylePokedle.css
@@ -26,3 +26,6 @@
     text-align: center;
     font-weight: bold;
 }
+#gen1,#gen2,#gen3,#gen4,#gen5,#gen6,#gen7,#gen8,#gen9{
+    background-color: green;
+}
